--- a/app/Resources/views/cours/adminLien.html.twig
+++ b/app/Resources/views/cours/adminLien.html.twig
@@ -32,15 +32,28 @@
         </div>
         <div class="row">
             <div class="LabelAdmin col-sm-2">Type du lien</div>
-            <div class="detailIconTypeLien col-xs-1"><i class="fa {{ lien.typeLien.faIcon }}"></i></div>
+            <div class="detailIconTypeLien col-xs-1">
+                {% if lien.typeLien.faIcon is defined %}
+                    <i class="fa {{ lien.typeLien.faIcon }}"></i>
+                {% else %}
+                    <i class="fa fa-external-link"></i>
+                {% endif %}
+            </div>
             <select class="col-sm-9  col-xs-11" title="Type du lien" data-champName="typeLien">
                 {% for key,val in lienTypes %}
                     <option data-icon="{{ val.faIcon }}" value="{{ val.id }}"
-                    {% if val.id == lien.typeLien.id %}
-                        selected="selected"
+                    {% if lien.typeLien.faIcon is defined %}
+                        {% if val.id == lien.typeLien.id %}
+                            selected="selected"
+                        {% endif %}
                     {% endif %}
                     >{{ val.nom }}</option>
                 {% endfor %}
+                <option data-icon="fa-external-link" value="0"
+                {% if not lien.typeLien.faIcon is defined %}
+                    selected="selected"
+                {% endif %}
+                >Par défaut</option>
             </select>
         </div>
     </div>
