upload en cours

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="{{ asset('vendors/bootstrap/dist/css/bootstrap.min.css') }}" />
         <link rel="stylesheet" href="{{ asset('vendors/bootstrap-select/dist/css/bootstrap-select.min.css') }}" />
         <link rel="stylesheet" href="{{ asset('vendors/components-font-awesome/css/font-awesome.min.css') }}" />
+        <link rel="stylesheet" href="{{ asset('vendors/blueimp-file-upload/css/jquery.fileupload.css') }}" />
+        <link rel="stylesheet" href="{{ asset('vendors/blueimp-file-upload/css/jquery.fileupload.css') }}" />
 
         <!--EDUComp Stylesheet -->
         <link rel="stylesheet" href="{{ asset('css/vendors.css') }}" />
@@ -30,6 +32,9 @@
         <script src="{{ asset('vendors/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('vendors/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('vendors/bootstrap-select/dist/js/bootstrap-select.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('vendors/blueimp-file-upload/js/vendor/jquery.ui.widget.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('vendors/blueimp-file-upload/js/jquery.fileupload.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('vendors/blueimp-file-upload/js/jquery.iframe-transport.js') }}" type="text/javascript"></script>
 
         <!--Educomp Custom Script-->
         <script src="{{ asset('educomp/js/eduCompMain.js') }}" type=text/javascript></script>
