--- a/web/css/components.css
+++ b/web/css/components.css
@@ -1092,7 +1092,7 @@ ol.list-styled>li{
 }
 
 /* Progress Bars */
-
+/*
 .progress{
     height: 40px;
     background-color: transparent;
@@ -1131,7 +1131,7 @@ ol.list-styled>li{
     line-height: 10px;
     margin-right: 10px;
     text-transform: uppercase;
-}
+}*/
 
 /* Pagination */
 
